--- a/app/globals.css
+++ b/app/globals.css
@@ -9,8 +9,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    /* --background: #0a0a0a; */
+    /* --foreground: #ededed; */
   }
 }
 
@@ -18,4 +18,17 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.yellow-hover {
+  transition: box-shadow 0.4s ease-in-out; /* Adjust duration as needed */
+}
+
+.yellow-hover:hover {
+  box-shadow: 
+    0 0 10px #FBD288, 
+    0 0 20px #FBD288, 
+    0 0 30px #FBD288, 
+    0 0 40px #FBD288, 
+    0 0 50px #FBD288;
 }
