--- a/app/globals.css
+++ b/app/globals.css
@@ -82,3 +82,37 @@ body {
   padding-left: 2rem;
   padding-right: 2rem;
 }
+.main-heading{
+  font-size: 8rem;
+}
+.primary-heading{
+  font-size: 3.2rem;
+}
+.secondary-heading{
+
+}
+
+
+@media screen and (max-width: 1024px) {
+  .main-heading{
+    font-size:5.5rem;
+  }
+  .primary-heading{
+    font-size: 2.9rem;
+  }
+}
+/* Mobile: Target devices with a max-width of 768px */
+@media screen and (max-width: 768px) {
+  .main-heading{
+    font-size:2.2rem;
+  }
+  .primary-heading{
+    font-size: 1.6rem;
+  }
+}
+
+/* @media  (max-width: 1024px) {
+  .primary-heading{
+    font-size:3.2rem;
+  }
+} */
